--- a/uniba/bandilavoro/browser/uniba.bandilavoro-style.css
+++ b/uniba/bandilavoro/browser/uniba.bandilavoro-style.css
@@ -7,6 +7,7 @@ table.bandilavoro-table th {
     padding: 4px;
     border-bottom: 2px solid #bbb;
     vertical-align: top;
+    text-align: left;
 }
 table.bandilavoro-table td {
     padding: 4px;
